--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,11 @@
         }
     },
     "scripts": {
-        "cs-check": "php -d memory_limit=1300M vendor/bin/phpcs"
+        "cs-check": "phpcs"
+    },
+    "replace": {
+        "spryker-demo/customer-subscription-page": "*",
+        "spryker-demo/oms-subscription": "*",
+        "spryker-demo/product-subscription-feature": "*"
     }
 }
