--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "spryker-demo/packages",
+    "name": "spryker/spryker-demo",
     "description": "Spryker Demo Packages",
     "license": "proprietary",
     "require": {
