--- a/Bundles/merchant-registration-page/composer.json
+++ b/Bundles/merchant-registration-page/composer.json
@@ -6,11 +6,11 @@
     "require": {
         "php": ">=7.4",
         "spryker/store": "*",
-        "../../../../spryker/kernel": "^3.30.0"
+        "spryker/kernel": "^3.30.0"
     },
     "require-dev": {
-        "../../../../spryker/code-sniffer": "*",
-        "../../../../spryker/testify": "*"
+        "spryker/code-sniffer": "*",
+        "spryker/testify": "*"
     },
     "autoload": {
         "psr-4": {
