--- a/Bundles/merchant-registration/composer.json
+++ b/Bundles/merchant-registration/composer.json
@@ -15,11 +15,11 @@
         "spryker/merchant-user": "*",
         "spryker/locale": "*",
         "spryker/store": "*",
-        "../../../../spryker/kernel": "^3.30.0"
+        "spryker/kernel": "^3.30.0"
     },
     "require-dev": {
-        "../../../../spryker/code-sniffer": "*",
-        "../../../../spryker/testify": "*"
+        "spryker/code-sniffer": "*",
+        "spryker/testify": "*"
     },
     "autoload": {
         "psr-4": {
