--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "scripts": {
         "formatter": "npm run formatter:run -- --check",
         "formatter:fix": "npm run formatter:run -- --write",
-        "formatter:run": "prettier --config ../../../node_modules/@spryker/frontend-config.prettier/.prettierrc.json \"**/*.(scss|css|less|js|ts|json|html|yml|yaml|xml)\"",
+        "formatter:run": "prettier --config node_modules/@spryker/frontend-config.prettier/.prettierrc.json \"**/*.(scss|css|less|js|ts|json|html|yml|yaml|xml)\"",
         "mp:tslint": "tslint -p tsconfig.json -c tslint.json",
         "mp:tslint:fix": "tslint -p tsconfig.json -c tslint.json --fix"
     },
