--- a/Bundles/SubscriptionProductDataImport/composer.json
+++ b/Bundles/SubscriptionProductDataImport/composer.json
@@ -4,9 +4,7 @@
     "description": "Subscription product data import module",
     "license": "MIT",
     "require": {
-        "php": ">=8.0",
-        "spryker/data-import": "^1.0.0",
-        "spryker/kernel": "^3.33.0"
+        "php": ">=8.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*"
