--- a/Bundles/SubscriptionProductPage/composer.json
+++ b/Bundles/SubscriptionProductPage/composer.json
@@ -5,7 +5,7 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.0",
-        "spryker-demo/subscription-product-oms": "*",
+        "spryker-demo/subscription-product-oms": "* as 1.0.0",
         "spryker-shop/customer-page": "^2.40.1",
         "spryker/application": "^3.30.1",
         "spryker/customer": "^7.48.1",
