--- a/Bundles/MerchantRegistrationDataImport/composer.json
+++ b/Bundles/MerchantRegistrationDataImport/composer.json
@@ -4,12 +4,10 @@
     "description": "Merchant registration data import module",
     "license": "proprietary",
     "require": {
-        "php": ">=8.0",
-        "spryker/kernel": "^3.30.0"
+        "php": ">=8.0"
     },
     "require-dev": {
-        "spryker/code-sniffer": "*",
-        "spryker/testify": "*"
+        "spryker/code-sniffer": "^0.17.18"
     },
     "autoload": {
         "psr-4": {
