--- a/Bundles/MerchantRegistrationFeature/composer.json
+++ b/Bundles/MerchantRegistrationFeature/composer.json
@@ -4,15 +4,10 @@
     "description": "Merchant registration feature module",
     "license": "proprietary",
     "require": {
-        "php": ">=8.0",
-        "spryker-demo/merchant-registration": "*",
-        "spryker-demo/merchant-registration-page": "*",
-        "spryker-demo/merchant-registration-data-import": "*",
-        "spryker/kernel": "^3.30.0"
+        "php": ">=8.0"
     },
     "require-dev": {
-        "spryker/code-sniffer": "*",
-        "spryker/testify": "*"
+        "spryker/code-sniffer": "^0.17.18"
     },
     "autoload": {
         "psr-4": {
