--- a/Bundles/MerchantRegistrationPage/composer.json
+++ b/Bundles/MerchantRegistrationPage/composer.json
@@ -5,12 +5,15 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.0",
-        "spryker/store": "*",
-        "spryker/kernel": "^3.30.0"
+        "spryker-demo/merchant-registration": "* as 1.0.0",
+        "spryker/application": "^3.30.1",
+        "spryker/kernel": "^3.30.0",
+        "spryker/store": "^1.16.1",
+        "spryker/symfony": "^3.11.1"
     },
     "require-dev": {
-        "spryker/code-sniffer": "*",
-        "spryker/testify": "*"
+        "spryker/code-sniffer": "^0.17.18",
+        "spryker/router": "^1.14.1"
     },
     "autoload": {
         "psr-4": {
@@ -35,5 +38,8 @@
     },
     "config": {
         "sort-packages": true
+    },
+    "suggest": {
+        "spryker/router": "ADD SUGGEST DESCRIPTION"
     }
 }
