--- a/Bundles/CustomerRepresentative/composer.json
+++ b/Bundles/CustomerRepresentative/composer.json
@@ -5,11 +5,16 @@
     "license": "proprietary",
     "require": {
         "php": ">=7.4",
-        "spryker/kernel": "^3.30.0"
+        "spryker/company": "^1.5.0",
+        "spryker/company-extension": "^1.0.0",
+        "spryker/kernel": "^3.30.0",
+        "spryker/propel-orm": "^1.1.0",
+        "spryker/testify": "^3.47.1",
+        "spryker/user": "^1.1.0",
+        "spryker/zed-request": "^1.0.0"
     },
     "require-dev": {
-        "spryker/code-sniffer": "*",
-        "spryker/testify": "*"
+        "spryker/code-sniffer": "^0.17.18"
     },
     "autoload": {
         "psr-4": {
