--- a/Bundles/CustomerRepresentativeWidget/composer.json
+++ b/Bundles/CustomerRepresentativeWidget/composer.json
@@ -5,11 +5,12 @@
     "license": "proprietary",
     "require": {
         "php": ">=7.4",
+        "spryker-demo/customer-representative": "*",
+        "spryker/customer": "^1.4.0",
         "spryker/kernel": "^3.30.0"
     },
     "require-dev": {
-        "spryker/code-sniffer": "*",
-        "spryker/testify": "*"
+        "spryker/code-sniffer": "^0.17.18"
     },
     "autoload": {
         "psr-4": {
