--- a/Bundles/CompanyRepresentativeGui/composer.json
+++ b/Bundles/CompanyRepresentativeGui/composer.json
@@ -5,7 +5,7 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.0",
-        "spryker-demo/customer-representative": "*",
+        "spryker-demo/customer-representative": "1.0.0",
         "spryker/company-gui-extension": "^1.0.0",
         "spryker/kernel": "^3.70.0",
         "spryker/symfony": "^3.11.1"
