--- a/Bundles/CustomerRepresentativeWidget/composer.json
+++ b/Bundles/CustomerRepresentativeWidget/composer.json
@@ -5,7 +5,7 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.0",
-        "spryker-demo/customer-representative": "*",
+        "spryker-demo/customer-representative": "1.0.0",
         "spryker/customer": "^7.48.1",
         "spryker/kernel": "^3.70.0"
     },
