--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,12 @@
         "spryker/code-sniffer": "dev-master"
     },
     "replace": {
+        "spryker-demo/merchant-review": "*",
+        "spryker-demo/merchant-review-gui": "*",
+        "spryker-demo/merchant-review-merchant-portal-gui": "*",
+        "spryker-demo/merchant-review-search": "*",
+        "spryker-demo/merchant-review-storage": "*",
+        "spryker-demo/merchant-review-widget": "*",
         "spryker-demo/subscription-product-page": "*",
         "spryker-demo/subscription-product-oms": "*",
         "spryker-demo/subscription-product-feature": "*"
