--- a/Bundles/MerchantRegistrationFeature/composer.json
+++ b/Bundles/MerchantRegistrationFeature/composer.json
@@ -4,7 +4,9 @@
     "description": "Merchant registration feature module",
     "license": "proprietary",
     "require": {
-        "php": ">=8.0"
+        "php": ">=8.0",
+        "spryker-demo/merchant-registration": "*",
+        "spryker-demo/merchant-registration-page": "*"
     },
     "require-dev": {
         "spryker/code-sniffer": "^0.17.18"
