Removed Active users function

--- a/Bundles/CompanyRepresentativeGui/composer.json
+++ b/Bundles/CompanyRepresentativeGui/composer.json
@@ -8,7 +8,8 @@
         "spryker-demo/customer-representative": "* as 1.0.0",
         "spryker/company-gui-extension": "^1.0.0",
         "spryker/kernel": "^3.70.0",
-        "spryker/symfony": "^3.11.1"
+        "spryker/symfony": "^3.11.1",
+        "spryker/user": "^3.14.1"
     },
     "require-dev": {
         "spryker/code-sniffer": "^0.17.18",
