SLA-2466 Fix -feature package to be a metapackage

--- a/Bundles/MerchantRegistrationFeature/composer.json
+++ b/Bundles/MerchantRegistrationFeature/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "spryker-demo/merchant-registration-feature",
-    "type": "library",
+    "type": "metapackage",
     "description": "Merchant registration feature module",
     "license": "proprietary",
     "require": {
