--- a/Bundles/FrontendConfiguratorWidget/composer.json
+++ b/Bundles/FrontendConfiguratorWidget/composer.json
@@ -5,12 +5,11 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.0",
-        "spryker/kernel": "^3.70.0",
-        "spryker-demo/frontend-configurator-storage": "* as 1.0.0"
+        "spryker-demo/frontend-configurator-storage": "* as 1.0.0",
+        "spryker/kernel": "^3.70.0"
     },
     "require-dev": {
-        "spryker/code-sniffer": "*",
-        "spryker/testify": "*"
+        "spryker/code-sniffer": "*"
     },
     "autoload": {
         "psr-4": {
