--- a/Bundles/CompanyRepresentativeWidget/composer.json
+++ b/Bundles/CompanyRepresentativeWidget/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "spryker-demo/customer-representative-widget",
+    "name": "spryker-demo/company-representative-widget",
     "type": "library",
-    "description": "Customer Representative Widget module",
+    "description": "Company Representative Widget module",
     "license": "proprietary",
     "require": {
         "php": ">=8.0",
