--- a/Bundles/MerchantReviewMerchantPortalGui/composer.json
+++ b/Bundles/MerchantReviewMerchantPortalGui/composer.json
@@ -4,12 +4,17 @@
     "description": "MerchantReviewMerchantPortalGui module",
     "license": "proprietary",
     "require": {
-        "php": ">=7.4",
-        "spryker/kernel": "^3.30.0"
+        "php": ">=8.0",
+        "spryker-demo/merchant-review": "^1.0.0",
+        "spryker/gui-table": "^2.1.0",
+        "spryker/locale": "^4.1.0",
+        "spryker/merchant-user": "^1.4.0",
+        "spryker/propel-orm": "^1.19.0",
+        "spryker/symfony": "^3.12.0",
+        "spryker/kernel": "^3.70.0"
     },
     "require-dev": {
-        "spryker/code-sniffer": "*",
-        "spryker/testify": "*"
+        "spryker/code-sniffer": "*"
     },
     "autoload": {
         "psr-4": {
