--- a/Bundles/MerchantReviewWidget/composer.json
+++ b/Bundles/MerchantReviewWidget/composer.json
@@ -4,12 +4,19 @@
     "description": "MerchantReviewWidget module",
     "license": "proprietary",
     "require": {
-        "php": ">=7.4",
-        "spryker/kernel": "^3.30.0"
+        "php": ">=8.0",
+        "spryker-demo/merchant-review": "^1.0.0",
+        "spryker-demo/merchant-review-storage": "^1.0.0",
+        "spryker-shop/shop-application": "^1.15.0",
+        "spryker/application": "^3.32.0",
+        "spryker/customer": "^7.51.0",
+        "spryker/kernel": "^3.70.0",
+        "spryker/storage": "^3.20.0",
+        "spryker/symfony": "^3.12.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
-        "spryker/testify": "*"
+        "spryker/router": "*"
     },
     "autoload": {
         "psr-4": {
@@ -34,5 +41,8 @@
     },
     "config": {
         "sort-packages": true
+    },
+    "suggest": {
+        "spryker/router": "To use router plugins"
     }
 }
