SLA-2563: update composer files

--- a/Bundles/MerchantReviewStorage/composer.json
+++ b/Bundles/MerchantReviewStorage/composer.json
@@ -10,7 +10,7 @@
         "spryker/kernel": "^3.70.0",
         "spryker/publisher-extension": "^1.0.0",
         "spryker/storage": "^3.20.0",
-        "spryker/synchronization": "*"
+        "spryker/synchronization": "^1.16.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*"
