--- a/Bundles/GoogleSheets/composer.json
+++ b/Bundles/GoogleSheets/composer.json
@@ -4,12 +4,12 @@
     "description": "GoogleSheets module",
     "license": "proprietary",
     "require": {
+        "google/apiclient": "^2.14.0",
         "php": ">=8.0",
         "spryker/kernel": "^3.30.0"
     },
     "require-dev": {
-        "spryker/code-sniffer": "*",
-        "spryker/testify": "*"
+        "spryker/code-sniffer": "*"
     },
     "autoload": {
         "psr-4": {
