--- a/Bundles/ImportProcessGoogleSheets/composer.json
+++ b/Bundles/ImportProcessGoogleSheets/composer.json
@@ -5,6 +5,7 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.0",
+        "spryker-demo/google-sheets": "* as 1.0.0",
         "spryker-demo/import-process": "* as 1.0.0",
         "spryker/kernel": "^3.30.0"
     },
