SLA-2563: update composer jsons

--- a/Bundles/MerchantReviewStorage/composer.json
+++ b/Bundles/MerchantReviewStorage/composer.json
@@ -10,6 +10,7 @@
         "spryker/kernel": "^3.70.0",
         "spryker/publisher-extension": "^1.0.0",
         "spryker/storage": "^3.20.0",
+        "spryker/symfony": "^3.12.0",
         "spryker/synchronization": "^1.14.0"
     },
     "require-dev": {
