--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     "license": "proprietary",
     "require": {
         "php": ">=8.0",
-        "spryker-demo/merchant-review": "*",
-        "spryker/event-behavior": "*",
+        "spryker-demo/merchant-review": "^1.0.0",
+        "spryker/event-behavior": "^1.25.0",
         "spryker/kernel": "^3.70.0",
-        "spryker/publisher-extension": "*",
-        "spryker/search": "*",
-        "spryker/search-extension": "*",
-        "spryker/store": "*",
-        "spryker/util-encoding": "*"
+        "spryker/publisher-extension": "^1.0.0",
+        "spryker/search": "^8.20.0",
+        "spryker/search-extension": "^1.2.0",
+        "spryker/store": "^1.16.1",
+        "spryker/util-encoding": "^2.1.1"
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
