--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "spryker/search": "^8.0.0",
         "spryker/search-extension": "^1.1.0",
         "spryker/store": "^1.16.1",
+        "spryker/synchronization-behavior": "^1.0.0",
         "spryker/util-encoding": "^2.1.1"
     },
     "require-dev": {
